<resources>
    <string name="app_name">MedicTime</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="enter_your_phone_password">Enter your phone password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="hello_s">Hello, %s</string>
    <string name="does_not_have_an_account">Doesn\'t have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="add">Add</string>
    <string name="your_today_s_activities">Your activities on %s</string>
    <string name="medicine">%d medicine</string>
    <string name="schedule_the_dose">Schedule the dose</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="description">description</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="medicine_description">Medicine Description</string>
    <string name="date">Date of Reminder</string>
    <string name="time">Time of Reminder</string>
    <string name="medicine_amount">Amount</string>
    <string name="done">Done</string>
    <string name="medicine_button">Medicine</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="profile">Profile</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">MedRemind is an app created as the solution for a global medicine-nonadherence problem. We aim to help patients adhering their medicine schedules given by medical professionals. MedRemind works by reminding you to take your medicine with an alarm and notification as its primary method. If a medication has been going on too long, or if there will be a side effect when you consume a medicine with another, MedRemind will notify you. So you can consult with your medical professionals about the best thing to do if such things happen. We proud ourselves in creating an application that will benefit us all.</string>
    <string name="our_headquarter">Our Headquarter</string>
    <string name="detail">detail</string>
</resources>