<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/orange_500"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/psjbold"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:src="@drawable/logo"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:fontFamily="@font/psjmedium"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="128dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username_input"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form"
            android:inputType="text"
            android:textColor="@color/black"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/enter_your_username"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/psjmedium"
            android:text="@string/email"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_marginEnd="147dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_input"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/enter_your_email"/>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/psjmedium"
            android:text="@string/phone_number"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_marginEnd="110dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_input"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form"
            android:inputType="phone"
            android:textColor="@color/black"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/enter_your_phone_number"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/psjmedium"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_marginEnd="130dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_input"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/form"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/enter_your_phone_password"/>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/psjbold"
            android:backgroundTint="#131313"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:layout_marginTop="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/login_btn"
                app:layout_constraintHorizontal_chainStyle="packed"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/login_text"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>