<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.about_us.AboutUsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/black"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/psjextrabold"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo"
            android:tint="@color/orange_500"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="36dp"
            android:fontFamily="@font/psjregular"
            android:text="@string/about_us_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:targetApi="o"/>

        <TextView
            android:id="@+id/headquarter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/psjextrabold"
            android:text="@string/our_headquarter"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_headquarter"/>

        <Button
            android:id="@+id/btn_headquarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:text="@string/detail"
            app:layout_constraintTop_toTopOf="@+id/headquarter"
            app:layout_constraintBottom_toBottomOf="@+id/headquarter"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_maps"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/headquarter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>